@@ -1,3 +1,9 @@
+2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits
+
+	* lisp/sawfish/wm/windows.jl: more robustness for get-window-by
+	-name, -class, -role
+
 2011-04-26  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/autoload.jl: removed maybe-raise-tab
 	from autoload, aswell as viewport-linear stuff
